<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".LoginActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginBottom="-15dp"
        android:background="#C4B26900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/bordeado_redondeado" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/paris"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#CDFFFFFF"
            android:padding="5dp"
            android:text="@string/ingresar_usario"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Asiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDFFFFFF"
            android:ems="10"
            android:hint="User"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#CDFFFFFF"
            android:padding="5dp"
            android:text="@string/ingresar_contra"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="#CDFFFFFF"
            android:ems="10"
            android:hint="**********"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_clean"
            android:text="@string/iniciar"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/redondo_shape"
        android:backgroundTint="#E4FFFFFF"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>